[package]
name = "timers"
version = "0.1.0"
authors = ["Vivek R <123vivekr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
figlet-rs = "0.1.3"
timer = "0.1.3"
chrono = "0.4.19"
more-asserts = "0.2.2"